# ium-projekt

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  imputer_pipeline.pkl  listings_preprocessing.py  pyproject.toml  requirements.txt  schema.py  test.http
docs/: etap-1-raport.md  etap-2-raport.md  uwagi.md
docs/konsultacje/: 2025-04-07.md  2025-05-14.md
models/: imputer_pipeline.pkl  linear_regression.pkl  nn.pkl  nn.pth  nn_weights.pth  scaler.pkl
notebooks/: analyze_logs.ipynb  data_exploration.ipynb  exploration_calendar.ipynb  exploration_listings.ipynb  missing_values.ipynb  model.ipynb  simple_model.ipynb  transformation.ipynb
src/: app.py  create_test_set.py  imputation.py  listings_preprocessing.py  mock_app_requests.py  prediction_service.py  schema.py
src/model/: api.py  linear_regression.py  random.py
src/model/neural_net/: early_stopping.py  fit_and_save.py  model.py  network.py  sweep.py
src/scripts/: mock_app_requests.py  split_dataset.py
tests/: requests.http  test_api.py  test_random_prediction_model.py  utils.py
